--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 				<extensions>true</extensions>
 				<configuration>
 					<cloudHubDeployment>
-						<uri>https://eu1.anypoint.mulesoft.com </uri>
+						<uri>https://anypoint.mulesoft.com </uri>
 						<muleVersion>4.4.0</muleVersion>
 						<username>Vikkymuletest</username>
 						<password>Vikky@2024</password>
